[package]
name = "ether"
version = "0.1.0"
authors = ["Hajime Fukuda"]

[dependencies]
http = "0.1"
futures = "0.1.23"
url = "1.7.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# TODO hyper = { version = "0.12", features = [], default-features = false }
hyper = "0.12"
tokio-fs = "0.1"
